# Rusty-Permission-Changer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: database.rs  gui.rs  main.rs  permissions.rs  utils.rs  worker.rs
